# tiny-nn

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  activation.h  conanfile.txt  flake.nix  idx.h  loss.h  main.cpp
gdextension/: CMakeLists.txt  neural_network.cpp  neural_network.h  register_types.cpp
godot/: CMakeLists.txt  SpinSlider.tscn  canvas.gd  canvas.gd.uid  canvas.tscn  control.gd  control.gd.uid  control.tscn  export_presets.cfg  icon.svg.import  probabilities.gd  probabilities.gd.uid  probabilities.tscn  project.godot  spin_slider.gd  spin_slider.gd.uid
godot/neural_network/: .gitignore  neural-network.gdextension  neural-network.gdextension.uid
lib/: activations.h  derivatives.h  loss_functions.h  nn.h  serialization.h
libnn/: CMakeLists.txt
libnn/src/: CMakeLists.txt  derivatives.h  feed.h  nn.h  serialization.h  train.h
libnn/tests/: CMakeLists.txt
python/: common.py  numpyNN.py  torchNN.py
recipes/godot-cpp/: conanfile.py
recipes/godot-cpp/test_package/: CMakeLists.txt  conanfile.py
recipes/godot-cpp/test_package/src/: example.cpp
src/: CMakeLists.txt  activation.h  idx.h  loss.h  main.cpp  nn.h
tests/: CMakeLists.txt  serialization.cpp
tools/: CMakeLists.txt  idx.h  main.cpp
